// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`applyViteHtmlTransform handleSSRComments should inject children as string 1`] = `
"
<html>
<head>
  <title>It's hydration time</title>
</head>
<body>
<slinkity-mount-point data-s-id=\\"0\\"><react>Content</react>
  <p>rendered by react</p></slinkity-mount-point>
<script type=\\"module\\">

import Component0 from \\"nice.jsx\\";
import renderer0 from \\"@slinkity/example/client\\";

renderer0({
  Component: Component0,
  target: document.querySelector(\`slinkity-mount-point[data-s-id=\\"0\\"]\`),
  props: {},
  children: \`
  <h2>Boy do I love react!</h2>\`,
  isSSR: true,
});

</script>
<slinkity-mount-point data-s-id=\\"1\\"><svelte>Content</svelte>
  <p>rendered by svelte</p></slinkity-mount-point>
<script type=\\"module\\">

import Component1 from \\"cool.svelte\\";
import renderer1 from \\"@slinkity/svelte/client\\";

renderer1({
  Component: Component1,
  target: document.querySelector(\`slinkity-mount-point[data-s-id=\\"1\\"]\`),
  props: {},
  children: \`
  <h2>Boy do I love svelte!</h2>\`,
  isSSR: true,
});

</script>
<slinkity-mount-point data-s-id=\\"2\\"><vue>Content</vue>
  <p>rendered by vue</p></slinkity-mount-point>
<script type=\\"module\\">

import Component2 from \\"neat.vue\\";
import renderer2 from \\"@slinkity/vue/client\\";

renderer2({
  Component: Component2,
  target: document.querySelector(\`slinkity-mount-point[data-s-id=\\"2\\"]\`),
  props: {},
  children: \`
  <h2>Boy do I love vue!</h2>\`,
  isSSR: true,
});

</script>
</body>
</html>"
`;

exports[`applyViteHtmlTransform handleSSRComments should inject props as object 1`] = `
"
<html>
<head>
  <title>It's hydration time</title>
</head>
<body>
<slinkity-mount-point data-s-id=\\"0\\"><react>Content</react>
  <p>rendered by react</p></slinkity-mount-point>
<script type=\\"module\\">

import Component0 from \\"nice.jsx\\";
import renderer0 from \\"@slinkity/example/client\\";

renderer0({
  Component: Component0,
  target: document.querySelector(\`slinkity-mount-point[data-s-id=\\"0\\"]\`),
  props: {rendererName:'react',outputPath:'/handle/ssr/comments.html',componentPath:'nice.jsx',nullValue:null,number:42},
  children: \`
  \`,
  isSSR: true,
});

</script>
<slinkity-mount-point data-s-id=\\"1\\"><svelte>Content</svelte>
  <p>rendered by svelte</p></slinkity-mount-point>
<script type=\\"module\\">

import Component1 from \\"cool.svelte\\";
import renderer1 from \\"@slinkity/svelte/client\\";

renderer1({
  Component: Component1,
  target: document.querySelector(\`slinkity-mount-point[data-s-id=\\"1\\"]\`),
  props: {rendererName:'svelte',outputPath:'/handle/ssr/comments.html',componentPath:'cool.svelte',nullValue:null,number:42},
  children: \`
  \`,
  isSSR: true,
});

</script>
<slinkity-mount-point data-s-id=\\"2\\"><vue>Content</vue>
  <p>rendered by vue</p></slinkity-mount-point>
<script type=\\"module\\">

import Component2 from \\"neat.vue\\";
import renderer2 from \\"@slinkity/vue/client\\";

renderer2({
  Component: Component2,
  target: document.querySelector(\`slinkity-mount-point[data-s-id=\\"2\\"]\`),
  props: {rendererName:'vue',outputPath:'/handle/ssr/comments.html',componentPath:'neat.vue',nullValue:null,number:42},
  children: \`
  \`,
  isSSR: true,
});

</script>
</body>
</html>"
`;

exports[`applyViteHtmlTransform handleSSRComments should inject styles into head 1`] = `
"
<html>
<head>
  <title>It's hydration time</title>
<link rel=\\"stylesheet\\" href=\\"/@fs/Users/person/project/styles.scss\\">
<link rel=\\"stylesheet\\" href=\\"/@fs/Users/person/project/more-styles.scss\\">
<link rel=\\"stylesheet\\" href=\\"/@fs/Users/person/project/nested/global.module.scss\\">
<link rel=\\"stylesheet\\" href=\\"/@fs/Users/person/project/excellent.css\\">
<link rel=\\"stylesheet\\" href=\\"/@fs/Users/person/project/neato.stylus\\">
</head>
<body>
</body>
</html>"
`;

exports[`applyViteHtmlTransform handleSSRComments should replace SSR comments with server rendered content 1`] = `
"
<html>
<head>
  <title>It's hydration time</title>
</head>
<body>
<slinkity-mount-point data-s-id=\\"0\\"><react>Content</react>
  <p>rendered by react</p></slinkity-mount-point>
<script type=\\"module\\">

import Component0 from \\"nice.jsx\\";
import renderer0 from \\"@slinkity/example/client\\";

renderer0({
  Component: Component0,
  target: document.querySelector(\`slinkity-mount-point[data-s-id=\\"0\\"]\`),
  props: {},
  children: \`
  \`,
  isSSR: true,
});

</script>
<slinkity-mount-point data-s-id=\\"1\\"><svelte>Content</svelte>
  <p>rendered by svelte</p></slinkity-mount-point>
<script type=\\"module\\">

import Component1 from \\"cool.svelte\\";
import renderer1 from \\"@slinkity/svelte/client\\";

renderer1({
  Component: Component1,
  target: document.querySelector(\`slinkity-mount-point[data-s-id=\\"1\\"]\`),
  props: {},
  children: \`
  \`,
  isSSR: true,
});

</script>
<slinkity-mount-point data-s-id=\\"2\\"><vue>Content</vue>
  <p>rendered by vue</p></slinkity-mount-point>
<script type=\\"module\\">

import Component2 from \\"neat.vue\\";
import renderer2 from \\"@slinkity/vue/client\\";

renderer2({
  Component: Component2,
  target: document.querySelector(\`slinkity-mount-point[data-s-id=\\"2\\"]\`),
  props: {},
  children: \`
  \`,
  isSSR: true,
});

</script>
</body>
</html>"
`;
